Fix pomegranate spacing

--- a/src/styles/pomegranate/_footer.scss
+++ b/src/styles/pomegranate/_footer.scss
@@ -1,5 +1,8 @@
 .headroom {
-  grid-column: span 4;
+  grid-column: span 3;
+  @media (min-width: $breakpoint) {
+    grid-column: span 4;
+  }
 }
 
 #footer {
